--- a/index.html
+++ b/index.html
@@ -46,6 +46,153 @@
             <div class="ellipse-3"></div>
             <div class="ellipse-4"></div>
         </div>
+        <div class="payment_text">
+            <h1>Manage your money in one platform</h1>
+            <a href="">Add Your Card
+                <svg width="19" height="8" viewBox="0 0 19 8" fill="none" xmlns="http://www.w3.org/2000/svg">
+                <path
+                    d="M13.189 2.59383H0.804688C0.532877 2.59383 0.3125 2.78272 0.3125 3.0157V4.98446C0.3125 5.21744 0.532877 5.40633 0.804688 5.40633H13.189V7.02559C13.189 7.7773 14.2493 8.15376 14.8694 7.62223L18.3992 4.59672C18.7836 4.2672 18.7836 3.73296 18.3992 3.40348L14.8694 0.377966C14.2493 -0.153561 13.189 0.222892 13.189 0.974603V2.59383Z"
+                    fill="#0066FF" />
+            </svg>
+</a>
+        </div>
     </div>
+    <div class="tracking _container">
+        <div class="tracking_text">
+            <div class="tracking_text_header">Money tracking system</div>
+            <div class="numbers">
+                <div class="tracking_text_target">
+                    <h1>12 000</h1>
+                    <p>Target</p>
+                </div>
+                <div class="tracking_text_collected">
+                    <h1>6 000</h1>
+                    <p>Сollected</p>
+                </div>
+            </div>
+        </div>
+        <div class="seryoga">
+            <img src="images/Rectangle 10.png" alt="">
+            <div class="seryoga_proces"></div>
+            <div class="seryoga_text">
+                <p>“For Them” Foundation</p>
+                <h1>Rehabilitation for Seryoga</h1>
+            </div>
+        </div>
+    </div>
+    <div class="help _container">
+        <div class="help_header">Let’s help together</div>
+        <div class="help_kids _container">
+            <div class="help_kid">
+                <img src="images/Rectangle 14-3.png" alt="">
+                <p>“Happy kids“ Foundation</p>
+                <h1>Diseases of the blood and spleen ...</h1>
+                <div class="help_text">
+                    <div class="help_text_target">
+                        <h1>12 000</h1>
+                        <p>Target</p>
+                    </div>
+                    <div class="help_text_collected">
+                        <h1>6 000</h1>
+                        <p>Сollected</p>
+                    </div>
+                </div>
+                <a href="" class="help_btn"><p>Help</p></a>
+            </div>
+            <div class="help_kid">
+                <img src="images/Rectangle 14-4.png" alt="">
+                <p>“Happy kids“ Foundation</p>
+                <h1>Heart surgery, second phase ...</h1>
+                <div class="help_text">
+                    <div class="help_text_target">
+                        <h1>12 000</h1>
+                        <p>Target</p>
+                    </div>
+                    <div class="help_text_collected">
+                        <h1>6 000</h1>
+                        <p>Сollected</p>
+                    </div>
+                </div>
+                <a href="" class="help_btn"><p>Help</p></a>
+            </div>
+            <div class="help_kid">
+                <img src="images/Rectangle 14-5.png" alt="">
+                <p>“Happy kids“ Foundation</p>
+                <h1>Diseases of the blood and spleen ...</h1>
+                <div class="help_text">
+                    <div class="help_text_target">
+                        <h1>12 000</h1>
+                        <p>Target</p>
+                    </div>
+                    <div class="help_text_collected">
+                        <h1>6 000</h1>
+                        <p>Сollected</p>
+                    </div>
+                </div>
+                <a href="" class="help_btn"><p>Help</p></a>
+            </div>
+            <div class="help_kid">
+                <img src="images/Rectangle 14-1.png" alt="">
+                <p>“Happy kids“ Foundation</p>
+                <h1>Diseases of the blood and spleen ...</h1>
+                <div class="help_text">
+                    <div class="help_text_target">
+                        <h1>12 000</h1>
+                        <p>Target</p>
+                    </div>
+                    <div class="help_text_collected">
+                        <h1>6 000</h1>
+                        <p>Сollected</p>
+                    </div>
+                </div>
+                <a href="" class="help_btn"><p>Help</p></a>
+            </div>
+            <div class="help_kid">
+                <img src="images/Rectangle 14-2.png" alt="">
+                <p>“Happy kids“ Foundation</p>
+                <h1>Diseases of the blood and spleen ...</h1>
+                <div class="help_text">
+                    <div class="help_text_target">
+                        <h1>12 000</h1>
+                        <p>Target</p>
+                    </div>
+                    <div class="help_text_collected">
+                        <h1>6 000</h1>
+                        <p>Сollected</p>
+                    </div>
+                </div>
+                <a href="" class="help_btn"><p>Help</p></a>
+            </div>
+            <div class="help_kid">
+                <img src="images/Rectangle 14-3.png" alt="">
+                <p>“Happy kids“ Foundation</p>
+                <h1>Diseases of the blood and spleen ...</h1>
+                <div class="help_text">
+                    <div class="help_text_target">
+                        <h1>12 000</h1>
+                        <p>Target</p>
+                    </div>
+                    <div class="help_text_collected">
+                        <h1>6 000</h1>
+                        <p>Сollected</p>
+                    </div>
+                </div>
+                <a href="" class="help_btn"><p>Help</p></a>
+            </div>
+        </div>
+    </div>
+    <div class="questions _container">
+        <h1>frequently asked questions</h1>
+    </div>
+    <div class="numPeople _container">
+        <h1>We are in numbers</h1>
+        <div class="numPeople_text">
+
+        </div>
+    </div>
+
+
+    <script src="js/jquery.js"></script>
+    <script src="js/main.js"></script>
 </body>
 </html>
